src/Components/Header.module.css
.header h1 {
  font-family: "Recursive";
  font-style: normal;
  font-weight: 500;
  font-size: 35px;
  line-height: 47px;
  color: #ffffff;
  margin: 0;
  text-shadow: 2px 2px #A5A735;;
}

.header p {
    margin-top: 0;
    margin-bottom: 2px;
    font-family: 'Recursive', sans-serif;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #A5A735;
    padding: 15px 25px;
}

.user {
    display: flex;
    gap: 10px;
    justify-content: center;
    align-items: center;
}
.user p:nth-child(2) {
    font-weight: 400;
    font-size: 12px;
}

.header a {
    text-decoration: none;
    color: #ffffff;
    font-family: 'Recursive', sans-serif;
    font-size: 25px; 
}
.smallNav p {
    font-size: 18px;
}


@media screen and (max-width : 500px) {
    .loginlink {
        display: none;
    }
    .header {
        border: none;
    }
    .user img {
        width: 35px;
        height: 35px;
    }
    
}

